...
                            }
                        }
                        .onDelete(perform: deleteFood)
                    }
                    .listStyle(.plain)
                }
                .navigationTitle("Food Logger")
                .toolbar {
                    ToolbarItem(placement: .navigationBarTrailing) {
                        Button {
                            showingAddView.toggle()
                        } label: {
                            Label("Add food", systemImage: "plus.circle")
                        }
                    }
                    ToolbarItem(placement: .navigationBarLeading) {
                        EditButton()
                    }
                }
...
